--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'Bebas';
+  src: url(../fonts/Bebas.woff2) format('woff2');
+  font-display: swap;
+  font-weight: 300;
+  font-style: normal;
+}
 *{
   box-sizing: border-box;
 }
@@ -50,4 +57,219 @@ body{
   text-align: center;
   color: #FFF;
   text-decoration: none;
+}
+.main{
+  max-width: 1280px;
+  margin: 0 auto;
+  display: flex;
+  padding-bottom: 99px;
+}
+.main-image{
+  padding-top: 56px;
+}
+.main-info{
+  flex-grow: 1;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  margin: 140px 0;
+}
+.home-image path{
+opacity: 0;
+cursor: pointer;
+}
+
+.home-image path:hover{
+opacity: 1;
+}
+path.current-floor{
+  opacity: 1;
+}
+.counter-group{
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+}
+.counter-btn{
+  background-color:#FFF;
+  border: none;
+  cursor: pointer;
+}
+.counter-arrow-down{
+  transform: rotateX(180deg);
+}
+.main-title{
+    font-family: 'Bebas',sans-serif;
+    font-weight: normal;
+    font-size: 37px;
+    line-height: 44px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #635854;
+    margin: 0;
+
+      
+}
+.floor-counter{
+font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color:#635854;
+  font-size: 124px;
+ margin-top: 10px;
+}
+.btn-primary{
+  background: #3596F5;
+  border-radius: 6px;
+  color: #FFF;
+  border:none;
+  padding: 16px 36px;
+  cursor: pointer;
+}
+.modal{
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color:rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  opacity: 0;
+  transform: scale(0);
+  transition: opacity 0.2s;
+
+}
+.is-open{
+  opacity: 1;
+  transform: scale(1);
+}
+.modal-dialog{
+  position: relative;
+  max-width: 1000px;
+  min-height: 565px;
+  background-color:#fff;
+  flex-grow: 1;
+  display: flex;
+  opacity: 0;
+  transform: translateY(-10%);
+  transition: transform 0.2s, opacity 0.2s;
+  transition-delay:0.2s ;
+
+}
+.is-open > .modal-dialog{
+  opacity: 1;
+  transform: translateY(0);
+}
+.modal-image{
+  background-color: #EBEBEB;
+  width: 60%;
+  text-align: center;
+  padding: 50px;
+}
+.flats path{
+  opacity: 0;
+  cursor: pointer;
+}
+.flats path:hover{
+  opacity: 1;
+}
+.modal-title{
+  font-family: 'Bebas', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px;
+  color: #000000;
+  margin-top: 0;
+  margin-bottom: 25px;
+}
+.modal-info{
+    width: 40%;
+  padding: 50px 46px;
+
+}
+.flat-list{
+  padding: 0;
+  list-style: none;
+  margin-top: 55px;
+}
+.flat-item {
+  margin-bottom: 10px;
+}
+.flat-link{
+  font-size: 16px;
+  line-height: 19px;
+  color: #635854;
+  text-decoration: none;
+}
+.flat-link:hover{
+  text-decoration-line: underline;
+  color: #3596F5;
+}
+.modal-alert{
+  font-style: italic;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  margin-top: 56px;
+  color: #635854;
+}
+.modal-close-btn{
+  position: absolute;
+  right: 27px;
+  top: 38px;
+  cursor: pointer;
+  border:none;
+  background-color:#fff;
+}
+.footer{
+  max-width: 1280px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer-left{
+  display: flex;
+  text-align: center;
+  align-items:center;
+  justify-content: space-between;
+
+}
+.phone{
+  max-width: 141px;
+  margin-left: 37px;
+  
+
+  
+}
+.phone-num{
+  font-size: 17px;
+  line-height: 20px;
+  color: #635854;
+}
+.phone-num span{
+  font-size: 14px;
+  line-height: 16px;
+  color: #635854;
+
+}
+.social-list{
+  list-style: none;
+  display: flex;
+  gap: 15px;
+}
+.footer-list{
+  list-style: none;
+  display: flex;
+  gap: 20px;
+}
+.footer-list-link{
+
+  font-size: 16px;
+  line-height: 19px;
+  color: #635854;
+
 }
